# showeq-daemon

./: .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  OPCODES_LEGENDS.md  OPCODES_LIVE_TODO.md  README.md  RUST.md  TEST_CLIENT_PLAN.md  TEST_OPCODE.md
.github/workflows/: ci.yml
conf/: opcodes.toml  seqdef.xml  seqopcodes.dtd  worldopcodes.xml  zoneopcodes.xml
conf/eql/: opcodes.toml  worldopcodes.xml  zoneopcodes.xml
conf/test/: opcodes.toml  worldopcodes.xml  zoneopcodes.xml
docs/: CHARACTER_REGISTRY_PLAN.md  MULTIBOX_PLAN.md  eql-chat-capture.md  patch-day.md  test-discovery.md
packaging/systemd/: showeq-daemon.env.example  showeq-daemon.service
scripts/: capture.py  decode_pbstream.py  ucs_chat_decode.py  ws_debug_client.py
src/: bazaarlog.cpp  bazaarlog.h  boxregistry.cpp  boxregistry.h  category.cpp  category.h  classes.h  combatrouter.cpp  combatrouter.h  config.h  crctab.h  daemonapp.cpp  daemonapp.h  datalocationmgr.cpp  datalocationmgr.h  datetimemgr.cpp  datetimemgr.h  dbcommon.h  dbstrings.cpp  dbstrings.h  decode.h  deity.h  diagnosticmessages.cpp  diagnosticmessages.h  envelopesink.h  eqstr.cpp  eqstr.h  eventlogger.cpp  eventlogger.h  everquest.h  filesink.cpp  filesink.h  filter.cpp  filter.h  filteredspawnlog.cpp  filteredspawnlog.h  filtermgr.cpp  filtermgr.h  fixpt.h  group.cpp  (+115 more)
src/backend/eql/: backend_prelude.h  eqldispatch.cpp  eqldispatch.h  everquest_legends.h  s_backend_structs.h  wire_eql.cpp
src/backend/live/: backend_prelude.h  everquest.h  s_backend_structs.h  wire_live.cpp
src/backend/test/: everquest.h
tests/: CMakeLists.txt  README.md  boxregistry_test.cpp  itemcache_test.cpp  itempacket_test.cpp  mappackages_test.cpp  namepromoter_test.cpp  packetinfo_test.cpp  packetstream_dispatch_test.cpp  protoencoder_test.cpp  rustdecode_test.cpp  seqcolor_test.cpp
tests/replay/: .gitignore  README.md  check.sh  inventory-worn.pbstream  inventory-worn2.pbstream
tools/: toml_to_xml.py  xml_to_toml.py
