# Tier-1 regression tests: pure-function unit tests against the daemon
# core library. No event loop, no network, no replay fixtures required.
#
# Tier-2 (replay against .vpk goldens) is documented in tests/README.md
# and is gated on capturing fixture files from a live session.

find_package(Qt6 REQUIRED COMPONENTS Test)

add_executable(protoencoder_test
  protoencoder_test.cpp
)

target_link_libraries(protoencoder_test PRIVATE
  seq-daemon-core
  Qt6::Test
)

target_compile_options(protoencoder_test PRIVATE
  -Wall
  -Wno-unused-parameter
  -Wno-deprecated-declarations
)

add_test(NAME protoencoder_test COMMAND protoencoder_test)

add_executable(seqcolor_test
  seqcolor_test.cpp
)

target_link_libraries(seqcolor_test PRIVATE
  seq-daemon-core
  Qt6::Test
)

target_compile_options(seqcolor_test PRIVATE
  -Wall
)

add_test(NAME seqcolor_test COMMAND seqcolor_test)

add_executable(packetinfo_test
  packetinfo_test.cpp
)

target_link_libraries(packetinfo_test PRIVATE
  seq-daemon-core
  Qt6::Test
)

target_compile_options(packetinfo_test PRIVATE
  -Wall
  -Wno-unused-parameter
  -Wno-deprecated-declarations
)

add_test(NAME packetinfo_test COMMAND packetinfo_test)

add_executable(itempacket_test
  itempacket_test.cpp
)

target_link_libraries(itempacket_test PRIVATE
  seq-daemon-core
  Qt6::Test
)

target_compile_options(itempacket_test PRIVATE
  -Wall
)

add_test(NAME itempacket_test COMMAND itempacket_test)

add_executable(itemcache_test
  itemcache_test.cpp
)

target_link_libraries(itemcache_test PRIVATE
  seq-daemon-core
  Qt6::Test
)

target_compile_options(itemcache_test PRIVATE
  -Wall
)

add_test(NAME itemcache_test COMMAND itemcache_test)

add_executable(mappackages_test
  mappackages_test.cpp
)

target_link_libraries(mappackages_test PRIVATE
  seq-daemon-core
  Qt6::Test
)

target_compile_options(mappackages_test PRIVATE
  -Wall
  -Wno-unused-parameter
  -Wno-deprecated-declarations
)

add_test(NAME mappackages_test COMMAND mappackages_test)

add_executable(boxregistry_test
  boxregistry_test.cpp
)

target_link_libraries(boxregistry_test PRIVATE
  seq-daemon-core
  Qt6::Test
)

target_compile_options(boxregistry_test PRIVATE
  -Wall
  -Wno-unused-parameter
  -Wno-deprecated-declarations
)

add_test(NAME boxregistry_test COMMAND boxregistry_test)

add_executable(namepromoter_test
  namepromoter_test.cpp
)

target_link_libraries(namepromoter_test PRIVATE
  seq-daemon-core
  Qt6::Test
)

target_compile_options(namepromoter_test PRIVATE
  -Wall
  -Wno-unused-parameter
  -Wno-deprecated-declarations
)

add_test(NAME namepromoter_test COMMAND namepromoter_test)

add_executable(packetstream_dispatch_test
  packetstream_dispatch_test.cpp
)

target_link_libraries(packetstream_dispatch_test PRIVATE
  seq-daemon-core
  Qt6::Test
)

target_compile_options(packetstream_dispatch_test PRIVATE
  -Wall
  -Wno-unused-parameter
  -Wno-deprecated-declarations
)

add_test(NAME packetstream_dispatch_test COMMAND packetstream_dispatch_test)

# FFI smoke test for the Rust decoder bridge (seq::rust::decode_*). seq-daemon-core
# links seq-bridge-cxx PUBLIC, so it propagates the generated cxx header here.
add_executable(rustdecode_test
  rustdecode_test.cpp
)

target_link_libraries(rustdecode_test PRIVATE
  seq-daemon-core
  Qt6::Test
)

target_compile_options(rustdecode_test PRIVATE
  -Wall
  -Wno-unused-parameter
  -Wno-deprecated-declarations
)

add_test(NAME rustdecode_test COMMAND rustdecode_test)
